iptables-backup.rules
# Generated by iptables-save v1.8.7 on Mon Nov 18 12:42:01 2024
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
COMMIT
# Completed on Mon Nov 18 12:42:01 2024
# Generated by iptables-save v1.8.7 on Mon Nov 18 12:42:01 2024
*filter
:INPUT ACCEPT [5379:1725775]
:FORWARD ACCEPT [14:12012]
:OUTPUT ACCEPT [5653:1673925]
:FLANNEL-FWD - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-NWPLCY-4E4UWTNLYVDMN7GH - [0:0]
:KUBE-NWPLCY-DEFAULT - [0:0]
:KUBE-NWPLCY-PQT2S4NOO4OLKRX3 - [0:0]
:KUBE-POD-FW-4FOQIBGCWG3X4J2E - [0:0]
:KUBE-POD-FW-E2QTUZLKIXX4GKGI - [0:0]
:KUBE-POD-FW-HWZ4TTFGZZIE25RM - [0:0]
:KUBE-POD-FW-MFTXKUSMJGNABKRR - [0:0]
:KUBE-POD-FW-MMMZSWHOLMNJMACJ - [0:0]
:KUBE-POD-FW-VRMCYQIZMQQT5Z3S - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-ROUTER-FORWARD - [0:0]
:KUBE-ROUTER-INPUT - [0:0]
:KUBE-ROUTER-OUTPUT - [0:0]
:KUBE-SERVICES - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -m comment --comment "kube-router netpol - 4IA2OSFRMVNDXBVV" -j KUBE-ROUTER-INPUT
-A INPUT -j ts-input
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "kube-router netpol - TEMCG2JMHZYE7H7T" -j KUBE-ROUTER-FORWARD
-A FORWARD -m comment --comment "flanneld forward" -j FLANNEL-FWD
-A FORWARD -j ts-forward
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -i enx0 -o enx -j ACCEPT
-A FORWARD -i enx -o enx0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m comment --comment "kube-router netpol - VEAAIY32XVBHCSCY" -j KUBE-ROUTER-OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A FLANNEL-FWD -s 10.42.0.0/16 -m comment --comment "flanneld forward" -j ACCEPT
-A FLANNEL-FWD -d 10.42.0.0/16 -m comment --comment "flanneld forward" -j ACCEPT
-A KUBE-EXTERNAL-SERVICES -d 10.0.0.119/32 -p tcp -m comment --comment "kube-system/traefik:web has no endpoints" -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-EXTERNAL-SERVICES -p tcp -m comment --comment "kube-system/traefik:web has no endpoints" -m addrtype --dst-type LOCAL -m tcp --dport 30067 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-EXTERNAL-SERVICES -d 10.0.0.119/32 -p tcp -m comment --comment "kube-system/traefik:websecure has no endpoints" -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-EXTERNAL-SERVICES -p tcp -m comment --comment "kube-system/traefik:websecure has no endpoints" -m addrtype --dst-type LOCAL -m tcp --dport 31822 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-NWPLCY-4E4UWTNLYVDMN7GH -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name allow-udp namespace default" -m set --match-set KUBE-SRC-NONSWRW6I47E7QP6 src -m set --match-set KUBE-DST-4VJU7R6KIAKKRZ64 dst -j MARK --set-xmark 0x10000/0x10000
-A KUBE-NWPLCY-4E4UWTNLYVDMN7GH -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name allow-udp namespace default" -m set --match-set KUBE-SRC-NONSWRW6I47E7QP6 src -m set --match-set KUBE-DST-4VJU7R6KIAKKRZ64 dst -m mark --mark 0x10000/0x10000 -j RETURN
-A KUBE-NWPLCY-4E4UWTNLYVDMN7GH -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix  "DROP by policy default/allow-udp" --nflog-group 100
-A KUBE-NWPLCY-4E4UWTNLYVDMN7GH -p udp -m comment --comment "rule to ACCEPT traffic from specified ipBlocks to dest pods selected by policy name: allow-udp namespace default" -m set --match-set KUBE-SRC-UZYZ36RTFF7GP6VF src -m set --match-set KUBE-DST-4VJU7R6KIAKKRZ64 dst -j MARK --set-xmark 0x10000/0x10000
-A KUBE-NWPLCY-4E4UWTNLYVDMN7GH -p udp -m comment --comment "rule to ACCEPT traffic from specified ipBlocks to dest pods selected by policy name: allow-udp namespace default" -m set --match-set KUBE-SRC-UZYZ36RTFF7GP6VF src -m set --match-set KUBE-DST-4VJU7R6KIAKKRZ64 dst -m mark --mark 0x10000/0x10000 -j RETURN
-A KUBE-NWPLCY-4E4UWTNLYVDMN7GH -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix  "DROP by policy default/allow-udp" --nflog-group 100
-A KUBE-NWPLCY-DEFAULT -m comment --comment "rule to mark traffic matching a network policy" -j MARK --set-xmark 0x10000/0x10000
-A KUBE-NWPLCY-PQT2S4NOO4OLKRX3 -m comment --comment "rule to ACCEPT traffic from all sources to dest pods selected by policy name: vlan52-allow-all-traffic namespace default" -m set --match-set KUBE-DST-BLNHMEDHX5JNNEE3 dst -j MARK --set-xmark 0x10000/0x10000
-A KUBE-NWPLCY-PQT2S4NOO4OLKRX3 -m comment --comment "rule to ACCEPT traffic from all sources to dest pods selected by policy name: vlan52-allow-all-traffic namespace default" -m set --match-set KUBE-DST-BLNHMEDHX5JNNEE3 dst -m mark --mark 0x10000/0x10000 -j RETURN
-A KUBE-NWPLCY-PQT2S4NOO4OLKRX3 -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix  "DROP by policy default/vlan52-allow-all-traffic" --nflog-group 100
-A KUBE-NWPLCY-PQT2S4NOO4OLKRX3 -m comment --comment "rule to ACCEPT traffic from source pods to all destinations selected by policy name: vlan52-allow-all-traffic namespace default" -m set --match-set KUBE-SRC-BLNHMEDHX5JNNEE3 src -j MARK --set-xmark 0x10000/0x10000
-A KUBE-NWPLCY-PQT2S4NOO4OLKRX3 -m comment --comment "rule to ACCEPT traffic from source pods to all destinations selected by policy name: vlan52-allow-all-traffic namespace default" -m set --match-set KUBE-SRC-BLNHMEDHX5JNNEE3 src -m mark --mark 0x10000/0x10000 -j RETURN
-A KUBE-NWPLCY-PQT2S4NOO4OLKRX3 -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix  "DROP by policy default/vlan52-allow-all-traffic" --nflog-group 100
-A KUBE-POD-FW-4FOQIBGCWG3X4J2E -m comment --comment "rule for stateful firewall for pod" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-POD-FW-4FOQIBGCWG3X4J2E -m comment --comment "rule to drop invalid state for pod" -m conntrack --ctstate INVALID -j DROP
-A KUBE-POD-FW-4FOQIBGCWG3X4J2E -d 10.42.0.8/32 -m comment --comment "rule to permit the traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-4FOQIBGCWG3X4J2E -s 10.42.0.8/32 -m comment --comment "run through default egress network policy  chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-4FOQIBGCWG3X4J2E -d 10.42.0.8/32 -m comment --comment "run through default ingress network policy  chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-4FOQIBGCWG3X4J2E -m comment --comment "rule to log dropped traffic POD name:traefik-56b8c5fb5c-nw7cj namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-4FOQIBGCWG3X4J2E -m comment --comment "rule to REJECT traffic destined for POD name:traefik-56b8c5fb5c-nw7cj namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-4FOQIBGCWG3X4J2E -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-4FOQIBGCWG3X4J2E -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-E2QTUZLKIXX4GKGI -m comment --comment "rule for stateful firewall for pod" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-POD-FW-E2QTUZLKIXX4GKGI -m comment --comment "rule to drop invalid state for pod" -m conntrack --ctstate INVALID -j DROP
-A KUBE-POD-FW-E2QTUZLKIXX4GKGI -d 10.42.0.7/32 -m comment --comment "rule to permit the traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-E2QTUZLKIXX4GKGI -s 10.42.0.7/32 -m comment --comment "run through default egress network policy  chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-E2QTUZLKIXX4GKGI -d 10.42.0.7/32 -m comment --comment "run through default ingress network policy  chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-E2QTUZLKIXX4GKGI -m comment --comment "rule to log dropped traffic POD name:svclb-traefik-0ced19fd-qggtr namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-E2QTUZLKIXX4GKGI -m comment --comment "rule to REJECT traffic destined for POD name:svclb-traefik-0ced19fd-qggtr namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-E2QTUZLKIXX4GKGI -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-E2QTUZLKIXX4GKGI -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-HWZ4TTFGZZIE25RM -m comment --comment "rule for stateful firewall for pod" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-POD-FW-HWZ4TTFGZZIE25RM -m comment --comment "rule to drop invalid state for pod" -m conntrack --ctstate INVALID -j DROP
-A KUBE-POD-FW-HWZ4TTFGZZIE25RM -d 10.42.0.6/32 -m comment --comment "rule to permit the traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-HWZ4TTFGZZIE25RM -s 10.42.0.6/32 -m comment --comment "run through default egress network policy  chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-HWZ4TTFGZZIE25RM -d 10.42.0.6/32 -m comment --comment "run through default ingress network policy  chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-HWZ4TTFGZZIE25RM -m comment --comment "rule to log dropped traffic POD name:coredns-5c6b6c5476-gq67p namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-HWZ4TTFGZZIE25RM -m comment --comment "rule to REJECT traffic destined for POD name:coredns-5c6b6c5476-gq67p namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-HWZ4TTFGZZIE25RM -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-HWZ4TTFGZZIE25RM -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-MFTXKUSMJGNABKRR -m comment --comment "rule for stateful firewall for pod" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-POD-FW-MFTXKUSMJGNABKRR -m comment --comment "rule to drop invalid state for pod" -m conntrack --ctstate INVALID -j DROP
-A KUBE-POD-FW-MFTXKUSMJGNABKRR -d 10.42.0.4/32 -m comment --comment "rule to permit the traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-MFTXKUSMJGNABKRR -s 10.42.0.4/32 -m comment --comment "run through default egress network policy  chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-MFTXKUSMJGNABKRR -d 10.42.0.4/32 -m comment --comment "run through default ingress network policy  chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-MFTXKUSMJGNABKRR -m comment --comment "rule to log dropped traffic POD name:metrics-server-7b67f64457-g744f namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-MFTXKUSMJGNABKRR -m comment --comment "rule to REJECT traffic destined for POD name:metrics-server-7b67f64457-g744f namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-MFTXKUSMJGNABKRR -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-MFTXKUSMJGNABKRR -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-MMMZSWHOLMNJMACJ -m comment --comment "rule for stateful firewall for pod" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-POD-FW-MMMZSWHOLMNJMACJ -m comment --comment "rule to drop invalid state for pod" -m conntrack --ctstate INVALID -j DROP
-A KUBE-POD-FW-MMMZSWHOLMNJMACJ -d 10.42.0.9/32 -m comment --comment "rule to permit the traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-MMMZSWHOLMNJMACJ -m comment --comment "run through nw policy vlan52-allow-all-traffic" -j KUBE-NWPLCY-PQT2S4NOO4OLKRX3
-A KUBE-POD-FW-MMMZSWHOLMNJMACJ -m comment --comment "rule to log dropped traffic POD name:vlan52-placeholder-6586c96599-2q2x7 namespace: default" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-MMMZSWHOLMNJMACJ -m comment --comment "rule to REJECT traffic destined for POD name:vlan52-placeholder-6586c96599-2q2x7 namespace: default" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-MMMZSWHOLMNJMACJ -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-MMMZSWHOLMNJMACJ -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-VRMCYQIZMQQT5Z3S -m comment --comment "rule for stateful firewall for pod" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-POD-FW-VRMCYQIZMQQT5Z3S -m comment --comment "rule to drop invalid state for pod" -m conntrack --ctstate INVALID -j DROP
-A KUBE-POD-FW-VRMCYQIZMQQT5Z3S -d 10.42.0.5/32 -m comment --comment "rule to permit the traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-VRMCYQIZMQQT5Z3S -s 10.42.0.5/32 -m comment --comment "run through default egress network policy  chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-VRMCYQIZMQQT5Z3S -d 10.42.0.5/32 -m comment --comment "run through default ingress network policy  chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-VRMCYQIZMQQT5Z3S -m comment --comment "rule to log dropped traffic POD name:local-path-provisioner-5d56847996-28crw namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-VRMCYQIZMQQT5Z3S -m comment --comment "rule to REJECT traffic destined for POD name:local-path-provisioner-5d56847996-28crw namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-VRMCYQIZMQQT5Z3S -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-VRMCYQIZMQQT5Z3S -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-ROUTER-FORWARD -d 10.42.0.8/32 -m comment --comment "rule to jump traffic destined to POD name:traefik-56b8c5fb5c-nw7cj namespace: kube-system to chain KUBE-POD-FW-4FOQIBGCWG3X4J2E" -j KUBE-POD-FW-4FOQIBGCWG3X4J2E
-A KUBE-ROUTER-FORWARD -d 10.42.0.8/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:traefik-56b8c5fb5c-nw7cj namespace: kube-system to chain KUBE-POD-FW-4FOQIBGCWG3X4J2E" -j KUBE-POD-FW-4FOQIBGCWG3X4J2E
-A KUBE-ROUTER-FORWARD -s 10.42.0.8/32 -m comment --comment "rule to jump traffic from POD name:traefik-56b8c5fb5c-nw7cj namespace: kube-system to chain KUBE-POD-FW-4FOQIBGCWG3X4J2E" -j KUBE-POD-FW-4FOQIBGCWG3X4J2E
-A KUBE-ROUTER-FORWARD -s 10.42.0.8/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:traefik-56b8c5fb5c-nw7cj namespace: kube-system to chain KUBE-POD-FW-4FOQIBGCWG3X4J2E" -j KUBE-POD-FW-4FOQIBGCWG3X4J2E
-A KUBE-ROUTER-FORWARD -d 10.42.0.9/32 -m comment --comment "rule to jump traffic destined to POD name:vlan52-placeholder-6586c96599-2q2x7 namespace: default to chain KUBE-POD-FW-MMMZSWHOLMNJMACJ" -j KUBE-POD-FW-MMMZSWHOLMNJMACJ
-A KUBE-ROUTER-FORWARD -d 10.42.0.9/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:vlan52-placeholder-6586c96599-2q2x7 namespace: default to chain KUBE-POD-FW-MMMZSWHOLMNJMACJ" -j KUBE-POD-FW-MMMZSWHOLMNJMACJ
-A KUBE-ROUTER-FORWARD -s 10.42.0.9/32 -m comment --comment "rule to jump traffic from POD name:vlan52-placeholder-6586c96599-2q2x7 namespace: default to chain KUBE-POD-FW-MMMZSWHOLMNJMACJ" -j KUBE-POD-FW-MMMZSWHOLMNJMACJ
-A KUBE-ROUTER-FORWARD -s 10.42.0.9/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:vlan52-placeholder-6586c96599-2q2x7 namespace: default to chain KUBE-POD-FW-MMMZSWHOLMNJMACJ" -j KUBE-POD-FW-MMMZSWHOLMNJMACJ
-A KUBE-ROUTER-FORWARD -d 10.42.0.4/32 -m comment --comment "rule to jump traffic destined to POD name:metrics-server-7b67f64457-g744f namespace: kube-system to chain KUBE-POD-FW-MFTXKUSMJGNABKRR" -j KUBE-POD-FW-MFTXKUSMJGNABKRR
-A KUBE-ROUTER-FORWARD -d 10.42.0.4/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:metrics-server-7b67f64457-g744f namespace: kube-system to chain KUBE-POD-FW-MFTXKUSMJGNABKRR" -j KUBE-POD-FW-MFTXKUSMJGNABKRR
-A KUBE-ROUTER-FORWARD -s 10.42.0.4/32 -m comment --comment "rule to jump traffic from POD name:metrics-server-7b67f64457-g744f namespace: kube-system to chain KUBE-POD-FW-MFTXKUSMJGNABKRR" -j KUBE-POD-FW-MFTXKUSMJGNABKRR
-A KUBE-ROUTER-FORWARD -s 10.42.0.4/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:metrics-server-7b67f64457-g744f namespace: kube-system to chain KUBE-POD-FW-MFTXKUSMJGNABKRR" -j KUBE-POD-FW-MFTXKUSMJGNABKRR
-A KUBE-ROUTER-FORWARD -d 10.42.0.5/32 -m comment --comment "rule to jump traffic destined to POD name:local-path-provisioner-5d56847996-28crw namespace: kube-system to chain KUBE-POD-FW-VRMCYQIZMQQT5Z3S" -j KUBE-POD-FW-VRMCYQIZMQQT5Z3S
-A KUBE-ROUTER-FORWARD -d 10.42.0.5/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:local-path-provisioner-5d56847996-28crw namespace: kube-system to chain KUBE-POD-FW-VRMCYQIZMQQT5Z3S" -j KUBE-POD-FW-VRMCYQIZMQQT5Z3S
-A KUBE-ROUTER-FORWARD -s 10.42.0.5/32 -m comment --comment "rule to jump traffic from POD name:local-path-provisioner-5d56847996-28crw namespace: kube-system to chain KUBE-POD-FW-VRMCYQIZMQQT5Z3S" -j KUBE-POD-FW-VRMCYQIZMQQT5Z3S
-A KUBE-ROUTER-FORWARD -s 10.42.0.5/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:local-path-provisioner-5d56847996-28crw namespace: kube-system to chain KUBE-POD-FW-VRMCYQIZMQQT5Z3S" -j KUBE-POD-FW-VRMCYQIZMQQT5Z3S
-A KUBE-ROUTER-FORWARD -d 10.42.0.6/32 -m comment --comment "rule to jump traffic destined to POD name:coredns-5c6b6c5476-gq67p namespace: kube-system to chain KUBE-POD-FW-HWZ4TTFGZZIE25RM" -j KUBE-POD-FW-HWZ4TTFGZZIE25RM
-A KUBE-ROUTER-FORWARD -d 10.42.0.6/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:coredns-5c6b6c5476-gq67p namespace: kube-system to chain KUBE-POD-FW-HWZ4TTFGZZIE25RM" -j KUBE-POD-FW-HWZ4TTFGZZIE25RM
-A KUBE-ROUTER-FORWARD -s 10.42.0.6/32 -m comment --comment "rule to jump traffic from POD name:coredns-5c6b6c5476-gq67p namespace: kube-system to chain KUBE-POD-FW-HWZ4TTFGZZIE25RM" -j KUBE-POD-FW-HWZ4TTFGZZIE25RM
-A KUBE-ROUTER-FORWARD -s 10.42.0.6/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:coredns-5c6b6c5476-gq67p namespace: kube-system to chain KUBE-POD-FW-HWZ4TTFGZZIE25RM" -j KUBE-POD-FW-HWZ4TTFGZZIE25RM
-A KUBE-ROUTER-FORWARD -d 10.42.0.7/32 -m comment --comment "rule to jump traffic destined to POD name:svclb-traefik-0ced19fd-qggtr namespace: kube-system to chain KUBE-POD-FW-E2QTUZLKIXX4GKGI" -j KUBE-POD-FW-E2QTUZLKIXX4GKGI
-A KUBE-ROUTER-FORWARD -d 10.42.0.7/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:svclb-traefik-0ced19fd-qggtr namespace: kube-system to chain KUBE-POD-FW-E2QTUZLKIXX4GKGI" -j KUBE-POD-FW-E2QTUZLKIXX4GKGI
-A KUBE-ROUTER-FORWARD -s 10.42.0.7/32 -m comment --comment "rule to jump traffic from POD name:svclb-traefik-0ced19fd-qggtr namespace: kube-system to chain KUBE-POD-FW-E2QTUZLKIXX4GKGI" -j KUBE-POD-FW-E2QTUZLKIXX4GKGI
-A KUBE-ROUTER-FORWARD -s 10.42.0.7/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:svclb-traefik-0ced19fd-qggtr namespace: kube-system to chain KUBE-POD-FW-E2QTUZLKIXX4GKGI" -j KUBE-POD-FW-E2QTUZLKIXX4GKGI
-A KUBE-ROUTER-FORWARD -m comment --comment "rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
-A KUBE-ROUTER-INPUT -d 10.43.0.0/16 -m comment --comment "allow traffic to primary cluster IP range - TZZOAXOCHPHEHX7M" -j RETURN
-A KUBE-ROUTER-INPUT -p tcp -m comment --comment "allow LOCAL TCP traffic to node ports - LR7XO7NXDBGQJD2M" -m addrtype --dst-type LOCAL -m multiport --dports 30000:32767 -j RETURN
-A KUBE-ROUTER-INPUT -p udp -m comment --comment "allow LOCAL UDP traffic to node ports - 76UCBPIZNGJNWNUZ" -m addrtype --dst-type LOCAL -m multiport --dports 30000:32767 -j RETURN
-A KUBE-ROUTER-INPUT -s 10.42.0.8/32 -m comment --comment "rule to jump traffic from POD name:traefik-56b8c5fb5c-nw7cj namespace: kube-system to chain KUBE-POD-FW-4FOQIBGCWG3X4J2E" -j KUBE-POD-FW-4FOQIBGCWG3X4J2E
-A KUBE-ROUTER-INPUT -s 10.42.0.9/32 -m comment --comment "rule to jump traffic from POD name:vlan52-placeholder-6586c96599-2q2x7 namespace: default to chain KUBE-POD-FW-MMMZSWHOLMNJMACJ" -j KUBE-POD-FW-MMMZSWHOLMNJMACJ
-A KUBE-ROUTER-INPUT -s 10.42.0.4/32 -m comment --comment "rule to jump traffic from POD name:metrics-server-7b67f64457-g744f namespace: kube-system to chain KUBE-POD-FW-MFTXKUSMJGNABKRR" -j KUBE-POD-FW-MFTXKUSMJGNABKRR
-A KUBE-ROUTER-INPUT -s 10.42.0.5/32 -m comment --comment "rule to jump traffic from POD name:local-path-provisioner-5d56847996-28crw namespace: kube-system to chain KUBE-POD-FW-VRMCYQIZMQQT5Z3S" -j KUBE-POD-FW-VRMCYQIZMQQT5Z3S
-A KUBE-ROUTER-INPUT -s 10.42.0.6/32 -m comment --comment "rule to jump traffic from POD name:coredns-5c6b6c5476-gq67p namespace: kube-system to chain KUBE-POD-FW-HWZ4TTFGZZIE25RM" -j KUBE-POD-FW-HWZ4TTFGZZIE25RM
-A KUBE-ROUTER-INPUT -s 10.42.0.7/32 -m comment --comment "rule to jump traffic from POD name:svclb-traefik-0ced19fd-qggtr namespace: kube-system to chain KUBE-POD-FW-E2QTUZLKIXX4GKGI" -j KUBE-POD-FW-E2QTUZLKIXX4GKGI
-A KUBE-ROUTER-INPUT -m comment --comment "rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
-A KUBE-ROUTER-OUTPUT -d 10.42.0.8/32 -m comment --comment "rule to jump traffic destined to POD name:traefik-56b8c5fb5c-nw7cj namespace: kube-system to chain KUBE-POD-FW-4FOQIBGCWG3X4J2E" -j KUBE-POD-FW-4FOQIBGCWG3X4J2E
-A KUBE-ROUTER-OUTPUT -s 10.42.0.8/32 -m comment --comment "rule to jump traffic from POD name:traefik-56b8c5fb5c-nw7cj namespace: kube-system to chain KUBE-POD-FW-4FOQIBGCWG3X4J2E" -j KUBE-POD-FW-4FOQIBGCWG3X4J2E
-A KUBE-ROUTER-OUTPUT -d 10.42.0.9/32 -m comment --comment "rule to jump traffic destined to POD name:vlan52-placeholder-6586c96599-2q2x7 namespace: default to chain KUBE-POD-FW-MMMZSWHOLMNJMACJ" -j KUBE-POD-FW-MMMZSWHOLMNJMACJ
-A KUBE-ROUTER-OUTPUT -s 10.42.0.9/32 -m comment --comment "rule to jump traffic from POD name:vlan52-placeholder-6586c96599-2q2x7 namespace: default to chain KUBE-POD-FW-MMMZSWHOLMNJMACJ" -j KUBE-POD-FW-MMMZSWHOLMNJMACJ
-A KUBE-ROUTER-OUTPUT -d 10.42.0.4/32 -m comment --comment "rule to jump traffic destined to POD name:metrics-server-7b67f64457-g744f namespace: kube-system to chain KUBE-POD-FW-MFTXKUSMJGNABKRR" -j KUBE-POD-FW-MFTXKUSMJGNABKRR
-A KUBE-ROUTER-OUTPUT -s 10.42.0.4/32 -m comment --comment "rule to jump traffic from POD name:metrics-server-7b67f64457-g744f namespace: kube-system to chain KUBE-POD-FW-MFTXKUSMJGNABKRR" -j KUBE-POD-FW-MFTXKUSMJGNABKRR
-A KUBE-ROUTER-OUTPUT -d 10.42.0.5/32 -m comment --comment "rule to jump traffic destined to POD name:local-path-provisioner-5d56847996-28crw namespace: kube-system to chain KUBE-POD-FW-VRMCYQIZMQQT5Z3S" -j KUBE-POD-FW-VRMCYQIZMQQT5Z3S
-A KUBE-ROUTER-OUTPUT -s 10.42.0.5/32 -m comment --comment "rule to jump traffic from POD name:local-path-provisioner-5d56847996-28crw namespace: kube-system to chain KUBE-POD-FW-VRMCYQIZMQQT5Z3S" -j KUBE-POD-FW-VRMCYQIZMQQT5Z3S
-A KUBE-ROUTER-OUTPUT -d 10.42.0.6/32 -m comment --comment "rule to jump traffic destined to POD name:coredns-5c6b6c5476-gq67p namespace: kube-system to chain KUBE-POD-FW-HWZ4TTFGZZIE25RM" -j KUBE-POD-FW-HWZ4TTFGZZIE25RM
-A KUBE-ROUTER-OUTPUT -s 10.42.0.6/32 -m comment --comment "rule to jump traffic from POD name:coredns-5c6b6c5476-gq67p namespace: kube-system to chain KUBE-POD-FW-HWZ4TTFGZZIE25RM" -j KUBE-POD-FW-HWZ4TTFGZZIE25RM
-A KUBE-ROUTER-OUTPUT -d 10.42.0.7/32 -m comment --comment "rule to jump traffic destined to POD name:svclb-traefik-0ced19fd-qggtr namespace: kube-system to chain KUBE-POD-FW-E2QTUZLKIXX4GKGI" -j KUBE-POD-FW-E2QTUZLKIXX4GKGI
-A KUBE-ROUTER-OUTPUT -s 10.42.0.7/32 -m comment --comment "rule to jump traffic from POD name:svclb-traefik-0ced19fd-qggtr namespace: kube-system to chain KUBE-POD-FW-E2QTUZLKIXX4GKGI" -j KUBE-POD-FW-E2QTUZLKIXX4GKGI
-A KUBE-ROUTER-OUTPUT -m comment --comment "rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
-A KUBE-SERVICES -d 10.43.135.197/32 -p tcp -m comment --comment "kube-system/traefik:web has no endpoints" -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.43.135.197/32 -p tcp -m comment --comment "kube-system/traefik:websecure has no endpoints" -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp has no endpoints" -m tcp --dport 53 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics has no endpoints" -m tcp --dport 9153 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns has no endpoints" -m udp --dport 53 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.43.188.113/32 -p tcp -m comment --comment "kube-system/metrics-server:https has no endpoints" -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.89.87.97/32 -i lo -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
COMMIT
# Completed on Mon Nov 18 12:42:01 2024
# Generated by iptables-save v1.8.7 on Mon Nov 18 12:42:01 2024
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:CNI-DN-783a9d0beb72c76318673 - [0:0]
:CNI-HOSTPORT-DNAT - [0:0]
:CNI-HOSTPORT-MASQ - [0:0]
:CNI-HOSTPORT-SETMARK - [0:0]
:FLANNEL-POSTRTG - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-2JB2R5BF7FAPGWPP - [0:0]
:KUBE-SEP-DW5OSMXFQII5IBPE - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-WJIHD3HBZ7HIGM73 - [0:0]
:ts-postrouting - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A POSTROUTING -m comment --comment "flanneld masq" -j FLANNEL-POSTRTG
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -m comment --comment "CNI portfwd requiring masquerade" -j CNI-HOSTPORT-MASQ
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -o enx -j SNAT --to-source 10.0.0.109
-A POSTROUTING -o enx -j SNAT --to-source 10.0.0.109
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A POSTROUTING -o enx -j MASQUERADE
-A CNI-DN-783a9d0beb72c76318673 -s 10.42.0.0/24 -p tcp -m tcp --dport 80 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-783a9d0beb72c76318673 -s 127.0.0.1/32 -p tcp -m tcp --dport 80 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-783a9d0beb72c76318673 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.42.0.7:80
-A CNI-DN-783a9d0beb72c76318673 -s 10.42.0.0/24 -p tcp -m tcp --dport 443 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-783a9d0beb72c76318673 -s 127.0.0.1/32 -p tcp -m tcp --dport 443 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-783a9d0beb72c76318673 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.42.0.7:443
-A CNI-HOSTPORT-DNAT -p tcp -m comment --comment "dnat name: \"cbr0\" id: \"a1ca226da85b4a5042e62efb5ca502cdd3fb15b80241aa4303dbd75696fc44fd\"" -m multiport --dports 80,443 -j CNI-DN-783a9d0beb72c76318673
-A CNI-HOSTPORT-MASQ -m mark --mark 0x2000/0x2000 -j MASQUERADE
-A CNI-HOSTPORT-SETMARK -m comment --comment "CNI portfwd masquerade mark" -j MARK --set-xmark 0x2000/0x2000
-A FLANNEL-POSTRTG -m mark --mark 0x4000/0x4000 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.42.0.0/24 -d 10.42.0.0/16 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.42.0.0/16 -d 10.42.0.0/24 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG ! -s 10.42.0.0/16 -d 10.42.0.0/24 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.42.0.0/16 ! -d 224.0.0.0/4 -m comment --comment "flanneld masq" -j MASQUERADE --random-fully
-A FLANNEL-POSTRTG ! -s 10.42.0.0/16 -d 10.42.0.0/16 -m comment --comment "flanneld masq" -j MASQUERADE --random-fully
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-2JB2R5BF7FAPGWPP -s 10.0.0.119/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-2JB2R5BF7FAPGWPP -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 10.0.0.119:6443
-A KUBE-SEP-DW5OSMXFQII5IBPE -s 10.42.0.9/32 -m comment --comment "default/vlan52-service" -j KUBE-MARK-MASQ
-A KUBE-SEP-DW5OSMXFQII5IBPE -p tcp -m comment --comment "default/vlan52-service" -m tcp -j DNAT --to-destination 10.42.0.9:80
-A KUBE-SERVICES -d 10.43.89.67/32 -p tcp -m comment --comment "default/vlan52-service cluster IP" -m tcp --dport 80 -j KUBE-SVC-WJIHD3HBZ7HIGM73
-A KUBE-SERVICES -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.42.0.0/16 -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 10.0.0.119:6443" -j KUBE-SEP-2JB2R5BF7FAPGWPP
-A KUBE-SVC-WJIHD3HBZ7HIGM73 ! -s 10.42.0.0/16 -d 10.43.89.67/32 -p tcp -m comment --comment "default/vlan52-service cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-WJIHD3HBZ7HIGM73 -m comment --comment "default/vlan52-service -> 10.42.0.9:80" -j KUBE-SEP-DW5OSMXFQII5IBPE
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Mon Nov 18 12:42:01 2024
